overflow of sections fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -35,6 +35,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
+  top: 0;
   /* border: yellow 2px solid; */
 }
 
@@ -112,6 +113,8 @@ nav ul li a:hover{
         width: 250px;
         height: 100vh;
         color: white;
+        box-shadow: rgba(47, 56, 65, 0.2) 0px 8px 24px;
+        /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
         transition: 0.2s;
         background-color: #010f1f;
     }
@@ -134,12 +137,16 @@ nav ul li a:hover{
     right: 0px;
   }
 
+  body:has(#nav-check:checked) .page-container, body:has(#nav-check:checked) footer {
+    opacity: 0.5;
+  }
+
 }
 
 section {
   padding-top: 1.5rem;
-  padding-left: 15rem;
-  padding-right: 15rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 
 }
 
@@ -348,8 +355,8 @@ p {
 @media only screen and (max-width:600px) {
 
   section {
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   h1 {
